Change: SMTPの設定を調整。

--- a/.env--local
+++ b/.env--local
@@ -1,4 +1,7 @@
 HOMEURL="http://localhost:3000"
 MAIL_SENDER="------@gmail.com"
 MAIL_PASSWORD="-------"
+DOMAIN="bookmarks.hippohack.me"
+SENDGRID_API_KEY="-----"
+FROM_ADDRESS="no-reply@hippohack.me"
 VERSION="v0.1.0"
