Change: VERSIONって環境変数はコンフリクトするみたい

--- a/.env--local
+++ b/.env--local
@@ -4,4 +4,4 @@ MAIL_PASSWORD="-------"
 DOMAIN="bookmarks.hippohack.me"
 SENDGRID_API_KEY="-----"
 FROM_ADDRESS="no-reply@hippohack.me"
-VERSION="v0.1.0"
+APP_VERSION="v0.1.0"
