--- a/.env--local
+++ b/.env--local
@@ -1,7 +1,7 @@
 HOMEURL="http://localhost:3000"
 MAIL_SENDER="------@gmail.com"
 MAIL_PASSWORD="-------"
-DOMAIN="bookmarks.hippohack.me"
+DOMAIN="hippohack.me"
 SENDGRID_API_KEY="-----"
 FROM_ADDRESS="no-reply@hippohack.me"
 APP_VERSION="v0.1.0"
