--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
     "vue": "^2.6.10",
+    "vue-draggable": "^2.0.2",
     "vue-loader": "^15.7.0",
     "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.6.10",
