--- a/config/database.yml
+++ b/config/database.yml
@@ -47,11 +47,11 @@ test:
 #
 # You can use this database configuration with:
 
-production:
-  url: <%= ENV['DATABASE_URL'] %>
-
 # production:
-#   <<: *default
-#   database: bookmarks_production
-#   username: bookmarks
-#   password: <%= ENV['BOOKMARKS_DATABASE_PASSWORD'] %>
+#   url: <%= ENV['DATABASE_URL'] %>
+
+production:
+  <<: *default
+  database: bookmarks_production
+  username: benzoh
+  password: <%= ENV['BOOKMARKS_DATABASE_PASSWORD'] %>
