--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-turbolinks": "^2.0.4"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-dev-server": "^3.3.1"
   }
