--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,21 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Debug RSpec - open spec file",
+      "type": "Ruby",
+      "request": "launch",
+      "cwd": "${workspaceRoot}",
+      "useBundler": true,
+      "pathToBundler": "/usr/local/bin/bundle",
+      "pathToRDebugIDE": "/bundle/gems/ruby-debug-ide-0.7.0/bin/rdebug-ide",
+      "debuggerPort": "1234",
+      "program": "/usr/local/bundle/bin/rspec",
+      "args": [
+        "--format", "documentation",
+        "${file}"
+      ]
+    },
+    {
       "name": "Local Docker - Listen for rdebug-ide",
       "type": "Ruby",
       "request": "attach",
@@ -9,18 +24,18 @@
       "remoteHost": "0.0.0.0",
       "remotePort": "1234",
       "remoteWorkspaceRoot": "/usr/src/bookmarks",
-      "useBundler": true,
+      "showDebuggerOutput": true
     },
-    // {
-    //   "name": "Rails server",
-    //   "type": "Ruby",
-    //   "request": "launch",
-    //   "cwd": "${workspaceRoot}",
-    //   "program": "bin/rails",
-    //   "args": [ "server" ],
-    //   "showDebuggerOutput": true,
-    //   "useBundler": true,
-    //   "env": { "DISABLE_SPRING": "1", "RAILS_ENV": "development" }
-    // }
+    {
+      "name": "Rails server",
+      "type": "Ruby",
+      "request": "launch",
+      "cwd": "${workspaceRoot}",
+      "program": "bin/rails",
+      "args": [ "server" ],
+      "showDebuggerOutput": true,
+      "useBundler": true,
+      "env": { "DISABLE_SPRING": "1", "RAILS_ENV": "development" }
+    }
   ]
 }
