--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,18 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Rails server with devcontainer",
+      "type": "Ruby",
+      "request": "launch",
+      "program": "${workspaceRoot}/bin/rails",
+      "showDebuggerOutput": true,
+      "args": [
+        "server",
+        "-p", "3000",
+        "-b", "0.0.0.0"
+      ]
+    },
+    {
       "name": "Debug RSpec - open spec file",
       "type": "Ruby",
       "request": "launch",
@@ -9,7 +21,7 @@
       "useBundler": true,
       "pathToBundler": "/usr/local/bin/bundle",
       "pathToRDebugIDE": "/bundle/gems/ruby-debug-ide-0.7.0/bin/rdebug-ide",
-      "debuggerPort": "1234",
+      "debuggerPort": "1235",
       "program": "/usr/local/bundle/bin/rspec",
       "args": [
         "--format", "documentation",
@@ -26,16 +38,5 @@
       "remoteWorkspaceRoot": "/usr/src/bookmarks",
       "showDebuggerOutput": true
     },
-    {
-      "name": "Rails server",
-      "type": "Ruby",
-      "request": "launch",
-      "cwd": "${workspaceRoot}",
-      "program": "bin/rails",
-      "args": [ "server" ],
-      "showDebuggerOutput": true,
-      "useBundler": true,
-      "env": { "DISABLE_SPRING": "1", "RAILS_ENV": "development" }
-    }
   ]
 }
