--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,17 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Foreman start with devcontainer",
+      "type": "Ruby",
+      "request": "launch",
+      "program": "/usr/local/bundle/bin/foreman",
+      "showDebuggerOutput": true,
+      "args": [
+        "start",
+        "-f", "/usr/src/bookmarks/Procfile.dev"
+      ]
+    },
+    {
       "name": "Rails server with devcontainer",
       "type": "Ruby",
       "request": "launch",
